# wf-bot

./: .gitignore  Cargo.toml  README.md
src/: main.rs  timing.rs  wf_api.rs
src/mods/: active_arb.rs  eidolon.rs  invite.rs  mod.rs  wm.rs
