[package]
name = "wf-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc_qq = "0.1"

anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
compact_str = { version = "0.2.0", features = ["serde"] }
time = { version = "0.3.7", features = ["serde", "serde-well-known", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3.8"
dotenv = "0.15.0"
sled = "0.34"
once_cell = "1.9"
itertools = "0.10"
phf = { version = "0.10", features = ["macros"] }
rand = "0.8.5"
